Animate circles populating graph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Dosis" rel="stylesheet">
+    <link rel="stylesheet" href="./stylesheets/graph.css">
     <meta charset="utf-8">
     <title>TeacherPay</title>
   </head>
