Add subject filters

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>TeacherPay</title>
   </head>
   <body>
+    <button id="science">science</button>
+    <button id="math">math</button>
+    <button id="reading">reading</button>
+    <button id="average">average</button>
     <script src="bundle.js"></script>
   </body>
 </html>
