style subject buttons

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>TeacherPay</title>
   </head>
   <body>
-    <button id="science">science</button>
-    <button id="math">math</button>
-    <button id="reading">reading</button>
-    <button id="average">average</button>
+    <button class="subject-btn" id="average" autofocus>average</button>
+    <button class="subject-btn" id="science">science</button>
+    <button class="subject-btn" id="math">math</button>
+    <button class="subject-btn" id="reading">reading</button>
     <script src="bundle.js"></script>
   </body>
 </html>
