--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <title>TeacherPay</title>
   </head>
   <body>
-    <button class="subject-btn" id="average" autofocus>average</button>
-    <button class="subject-btn" id="science">science</button>
-    <button class="subject-btn" id="math">math</button>
-    <button class="subject-btn" id="reading">reading</button>
+    <h1>TeacherPay</h1>
+    <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
+    <div class="subject-btns">
+      <button class="subject-btn" id="average" autofocus>average</button>
+      <button class="subject-btn" id="science">science</button>
+      <button class="subject-btn" id="math">math</button>
+      <button class="subject-btn" id="reading">reading</button>
+    </div>
+
+    <div class="school-type-btns">
+      <button class="school-type-btn" id="primary">primary</button>
+      <button class="school-type-btn" id="lower-secondary">lower-secondary</button>
+      <button class="school-type-btn" id="upper-secondary">upper-secondary</button>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
