Format button locations

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <h1>TeacherPay</h1>
     <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
     <div class="subject-btns">
-      <button class="subject-btn" id="average" autofocus>average</button>
-      <button class="subject-btn" id="science">science</button>
-      <button class="subject-btn" id="math">math</button>
-      <button class="subject-btn" id="reading">reading</button>
+      <button class="subject-btn" id="average" autofocus>Overall</button>
+      <button class="subject-btn" id="science">Science</button>
+      <button class="subject-btn" id="math">Math</button>
+      <button class="subject-btn" id="reading">Reading</button>
     </div>
 
     <div class="school-type-btns">
-      <button class="school-type-btn" id="primary">primary</button>
-      <button class="school-type-btn" id="lower-secondary">lower-secondary</button>
-      <button class="school-type-btn" id="upper-secondary">upper-secondary</button>
+      <button class="school-type-btn" id="average-salary">Average</button>
+      <button class="school-type-btn" id="primary">Primary</button>
+      <button class="school-type-btn" id="lower-secondary">Lower Secondary</button>
+      <button class="school-type-btn" id="upper-secondary">Upper Secondary</button>
     </div>
     <script src="bundle.js"></script>
   </body>
