Add region filters

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
       <button class="subject-btn" id="reading">Reading</button>
     </div>
 
+    <div class="regions-checkboxes">
+      <fieldset id="europe">
+        <label>Europe</label>
+        <input type="checkbox" class="my-checkbox" value="Europe" checked/>
+      </fieldset>
+      <fieldset id="asia">
+        <label>Asia</label>
+        <input type="checkbox" class="my-checkbox" value="Asia" checked/>
+      </fieldset>
+      <fieldset id="north-america">
+        <label>North America</label>
+        <input type="checkbox" class="my-checkbox" value="North America" checked/>
+      </fieldset>
+      <fieldset id="latin-america">
+        <label>Latin America</label>
+        <input type="checkbox" class="my-checkbox" value="Latin America" checked/>
+      </fieldset>
+      <fieldset id="oceania">
+        <label>Oceania</label>
+        <input type="checkbox" class="my-checkbox" value="Oceania" checked/>
+      </fieldset>
+    </div>
+
     <div class="school-type-btns">
       <button class="school-type-btn" id="average-salary">Average</button>
       <button class="school-type-btn" id="primary">Primary</button>
