move regions checkboxes to left and remove click country for more info subtitle

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>TeacherPay</h1>
     <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
-    <strong>Click a country bubble for specific info.</strong>
+    <!-- <strong>Click a country bubble for specific info.</strong> -->
     <div class="subject-btns">
       <button class="subject-btn" id="average" autofocus>Overall</button>
       <button class="subject-btn" id="science">Science</button>
