remove focus css for buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- <strong>Click a country bubble for specific info.</strong> -->
     </div>
     <div class="subject-btns">
-      <button class="subject-btn" id="average" autofocus>Overall</button>
+      <button class="subject-btn" id="average">Overall</button>
       <button class="subject-btn" id="science">Science</button>
       <button class="subject-btn" id="math">Math</button>
       <button class="subject-btn" id="reading">Reading</button>
