add selected-btn class to overall and average btns in html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- <strong>Click a country bubble for specific info.</strong> -->
     </div>
     <div class="subject-btns">
-      <button class="subject-btn" id="average">Overall</button>
+      <button class="subject-btn selected-btn" id="average">Overall</button>
       <button class="subject-btn" id="science">Science</button>
       <button class="subject-btn" id="math">Math</button>
       <button class="subject-btn" id="reading">Reading</button>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="school-type-btns">
-      <button class="school-type-btn" id="average-salary">Average</button>
+      <button class="school-type-btn selected-btn" id="average-salary">Average</button>
       <button class="school-type-btn" id="primary">Primary</button>
       <button class="school-type-btn" id="lower-secondary">Lower Secondary</button>
       <button class="school-type-btn" id="upper-secondary">Upper Secondary</button>
