--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <div class="main-header">
       <h1>TeacherPay</h1>
       <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
+      <div class="help-tip header-tip">
+        <p>
+          Background: As a former teacher, I had heard at some point that countries that paid their teachers the highest salaries also had the best overall education systems, which implied best student achievement.
+          <br><br>
+          To determine if this was true, I decided to analyze data provided by the Organization for Economic Cooperation and Development (OECD) and build TeacherPay, a simple visual tool that shows the relationship between teacher pay and student outcomes in science, math, and reading across the 35 countries that are members of the OECD.
+          <br><br>
+          Note: The size of a country bubble correlates with its GDP.
+        </p>
+      </div>
       <!-- <strong>Click a country bubble for specific info.</strong> -->
     </div>
     <div class="subject-btns">
