update header tip text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <br><br>
           To determine if this was true, I decided to analyze data provided by the Organization for Economic Cooperation and Development (OECD) and build TeacherPay, a simple visual tool that shows the relationship between teacher pay and student outcomes in science, math, and reading across the 35 countries that are members of the OECD.
           <br><br>
-          Note: The size of a country bubble correlates with its GDP.
+          Note: The size of a non-clicked country bubble correlates with its GDP.
         </p>
       </div>
       <!-- <strong>Click a country bubble for specific info.</strong> -->
