add orange favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="./dollar-sign-orange.png"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/graph.css">
     <meta charset="utf-8">
