change teacher salary to teacher salaries in sub header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main-header">
       <h1>TeacherPay</h1>
-      <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
+      <h3>A visual analysis of teacher salaries to student outcomes across the world</h3>
       <div class="help-tip header-tip">
         <p>
           Background: As a former teacher, I had heard at some point that countries that paid their teachers the highest salaries also had the best overall education systems, which implied best student achievement.
