update readme to be more explicit about where the 35 countries came from and edit header tip

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
           Background: As a former teacher, I had heard at some point that countries that paid their teachers the highest salaries also had the best overall education systems, which implied best student achievement.
           <br><br>
-          To determine if this was true, I decided to analyze data provided by the Organization for Economic Cooperation and Development (OECD) and build TeacherPay, a simple visual tool that shows the relationship between teacher pay and student outcomes in science, math, and reading across the 35 countries that are members of the OECD.
+          To determine if this was true, I decided to analyze data provided by the Organization for Economic Cooperation and Development (OECD) and build TeacherPay, a simple visual tool that shows the relationship between teacher salaries and student outcomes in science, math, and reading across 35 countries. You can find more information about this project <a href="https://github.com/brillantewang/teacherpay/blob/master/README.md">here</a>.
           <br><br>
           Note: The size of a non-clicked country bubble correlates with its GDP.
         </p>
