add meta viewport tag to html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Dosis" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/graph.css">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TeacherPay</title>
   </head>
   <body>
     <div class="main-header">
       <h1>TeacherPay</h1>
       <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
+      <p>Note: The size of a country bubble represents its GDP.<p>
       <div class="help-tip header-tip">
         <p>
           Background: As a former teacher, I had heard at some point that countries that paid their teachers the highest salaries also had the best overall education systems, which implied best student achievement.
