center note text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main-header">
       <h1>TeacherPay</h1>
       <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
-      <p>Note: The size of a country bubble represents its GDP.<p>
+      <p class="note-text">Note: The size of a country bubble represents its GDP.<p>
       <div class="help-tip header-tip">
         <p>
           Background: As a former teacher, I had heard at some point that countries that paid their teachers the highest salaries also had the best overall education systems, which implied best student achievement.
@@ -22,7 +22,6 @@
           Note: The size of a non-clicked country bubble correlates with its GDP.
         </p>
       </div>
-      <!-- <strong>Click a country bubble for specific info.</strong> -->
     </div>
     <div class="subject-btns">
       <div class="help-tip subjects-tip">
