--- a/index.html
+++ b/index.html
@@ -38,24 +38,29 @@
 
     <div class="regions-checkboxes">
       <fieldset id="europe">
-        <label>Europe</label>
-        <input type="checkbox" class="my-checkbox" value="Europe" checked/>
+        <label>
+          <input type="checkbox" class="my-checkbox" value="Europe" checked/>Europe
+        </label>
       </fieldset>
       <fieldset id="asia">
-        <label>Asia</label>
-        <input type="checkbox" class="my-checkbox" value="Asia" checked/>
+        <label>
+          <input type="checkbox" class="my-checkbox" value="Asia" checked/>Asia
+        </label>
       </fieldset>
       <fieldset id="north-america">
-        <label>North America</label>
-        <input type="checkbox" class="my-checkbox" value="North America" checked/>
+        <label>
+          <input type="checkbox" class="my-checkbox" value="North America" checked/>North America
+        </label>
       </fieldset>
       <fieldset id="latin-america">
-        <label>Latin America</label>
-        <input type="checkbox" class="my-checkbox" value="Latin America" checked/>
+        <label>
+          <input type="checkbox" class="my-checkbox" value="Latin America" checked/>Latin America
+        </label>
       </fieldset>
       <fieldset id="oceania">
-        <label>Oceania</label>
-        <input type="checkbox" class="my-checkbox" value="Oceania" checked/>
+        <label>
+          <input type="checkbox" class="my-checkbox" value="Oceania" checked/>Oceania
+        </label>
       </fieldset>
     </div>
 
