reposition main header to be left aligned and checkboxes to be a row and on the right

--- a/index.html
+++ b/index.html
@@ -38,29 +38,19 @@
 
     <div class="regions-checkboxes">
       <fieldset id="europe">
-        <label>
-          <input type="checkbox" class="my-checkbox" value="Europe" checked/>Europe
-        </label>
+        <label><input type="checkbox" class="my-checkbox" value="Europe" checked/>Europe</label>
       </fieldset>
       <fieldset id="asia">
-        <label>
-          <input type="checkbox" class="my-checkbox" value="Asia" checked/>Asia
-        </label>
+        <label><input type="checkbox" class="my-checkbox" value="Asia" checked/>Asia</label>
       </fieldset>
       <fieldset id="north-america">
-        <label>
-          <input type="checkbox" class="my-checkbox" value="North America" checked/>North America
-        </label>
+        <label><input type="checkbox" class="my-checkbox" value="North America" checked/>North America</label>
       </fieldset>
       <fieldset id="latin-america">
-        <label>
-          <input type="checkbox" class="my-checkbox" value="Latin America" checked/>Latin America
-        </label>
+        <label><input type="checkbox" class="my-checkbox" value="Latin America" checked/>Latin America</label>
       </fieldset>
       <fieldset id="oceania">
-        <label>
-          <input type="checkbox" class="my-checkbox" value="Oceania" checked/>Oceania
-        </label>
+        <label><input type="checkbox" class="my-checkbox" value="Oceania" checked/>Oceania</label>
       </fieldset>
     </div>
 
