--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <button class="school-type-btn" id="lower-secondary">Lower Secondary School</button>
         <button class="school-type-btn" id="upper-secondary">Upper Secondary School</button>
         <button class="school-type-btn selected-btn" id="average-salary">Average</button>
-        <div class="help-tip school-types-tip">
+        <!-- <div class="help-tip school-types-tip">
           <p>
             This axis represents a country's annual teacher salary in 2015 converted to US dollars using purchasing power parity to account for cost of living. You can filter between primary, lower secondary, and upper secondary school.
             <br><br>For example, Poland's lower secondary school teachers had a mean salary equivalent to earning $25,375 in the US.
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
     <script src="bundle.js"></script>
