make title-and-help-tip container and make position relative

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <body>
     <div class="header-regions-container">
       <div class="main-header">
-        <h1>TeacherPay</h1>
+        <div class="title-and-help-tip">
+          <h1>TeacherPay</h1>
+          <div class="help-tip header-tip">
+            <p>
+              As a former teacher, I had heard that countries that paid their teachers the highest salaries also had the best education systems.
+              <br><br>
+              To see if this was true, I analyzed data provided by the Organization for Economic Cooperation and Development (OECD) to build TeacherPay, a simple tool that shows the relationship between teacher salaries and student outcomes in science, math, and reading across 35 countries. You can find more information about this project <a href="https://github.com/brillantewang/teacherpay/blob/master/README.md">here</a>.
+            </p>
+          </div>
+        </div>
         <h3>A visual analysis of teacher salary to student outcomes across the world</h3>
         <p class="note-text">Note: The size of a country bubble represents its GDP.<p>
-        <div class="help-tip header-tip">
-          <p>
-            As a former teacher, I had heard that countries that paid their teachers the highest salaries also had the best education systems.
-            <br><br>
-            To see if this was true, I analyzed data provided by the Organization for Economic Cooperation and Development (OECD) to build TeacherPay, a simple tool that shows the relationship between teacher salaries and student outcomes in science, math, and reading across 35 countries. You can find more information about this project <a href="https://github.com/brillantewang/teacherpay/blob/master/README.md">here</a>.
-          </p>
-        </div>
       </div>
       <div class="regions-checkboxes">
         <fieldset id="europe">
