remove school-type-btns-container div and instead append foreign object to xAxisG and append html (div) to the foreignObject allowing for buttons to be 'always be 'connected' to the axis for responsiveness

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     </div>
 
 
-    <div class="school-type-btns-container">
+    <!-- <div class="school-type-btns-container">
       <div class="school-type-btns">
         <button class="school-type-btn" id="primary">Primary School</button>
         <button class="school-type-btn" id="lower-secondary">Lower Secondary School</button>
         <button class="school-type-btn" id="upper-secondary">Upper Secondary School</button>
         <button class="school-type-btn selected-btn" id="average-salary">Average</button>
       </div>
-    </div>
+    </div> -->
     <script src="bundle.js"></script>
   </body>
 </html>
