remove subject btns div and instead append foreign object to yAxisG as subject buttons to allow for responsiveness

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         </fieldset>
       </div>
     </div>
-    <div class="subject-btns">
+    <!-- <div class="subject-btns">
       <button class="subject-btn" id="science">Science</button>
       <button class="subject-btn" id="math">Math</button>
       <button class="subject-btn" id="reading">Reading</button>
       <button class="subject-btn selected-btn" id="average">Overall</button>
-    </div>
+    </div> -->
 
 
     <!-- <div class="school-type-btns-container">
